--- a/index.html
+++ b/index.html
@@ -4,6 +4,65 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>IndonesianTimes - Berita Tercepat & Terpercaya 2025</title>
+<!DOCTYPE html>
+<html lang="id">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>IndonesianTimes - Berita Tercepat & Terpercaya 2025</title>
+    
+    <!-- Structured Data (JSON-LD) -->
+    <script type="application/ld+json">
+    {
+      "@context": "https://schema.org",
+      "@type": "NewsMediaOrganization",
+      "name": "IndonesianTimes",
+      "url": "https://www.indonesiantimes.id",
+      "logo": "https://www.indonesiantimes.id/logo.png",
+      "sameAs": [
+        "https://www.facebook.com/indonesiantimes",
+        "https://www.twitter.com/indonesiantimes",
+        "https://www.instagram.com/indonesiantimes"
+      ],
+      "founder": "PT. Media Cerdas Indonesia",
+      "foundingDate": "2020-01-01",
+      "address": {
+        "@type": "PostalAddress",
+        "streetAddress": "Jl. Merdeka No.1",
+        "addressLocality": "Jakarta",
+        "postalCode": "10110",
+        "addressCountry": "ID"
+      }
+    }
+    </script>
+
+    <!-- Meta Tags for SEO & Social -->
+    <meta name="description" content="IndonesianTimes menyajikan berita tercepat, terpercaya, dan terverifikasi di Indonesia. Dapatkan update politik, ekonomi, teknologi, dan olahraga setiap hari.">
+    <meta name="keywords" content="berita Indonesia, berita terpercaya, berita politik, ekonomi, teknologi, olahraga">
+    <meta name="author" content="IndonesianTimes">
+
+    <!-- Open Graph (Facebook) -->
+    <meta property="og:title" content="IndonesianTimes - Berita Tercepat & Terpercaya 2025">
+    <meta property="og:description" content="Portal berita terpercaya dengan update real-time, fakta terverifikasi dan e-paper digital.">
+    <meta property="og:image" content="https://www.indonesiantimes.id/cover.jpg">
+    <meta property="og:url" content="https://www.indonesiantimes.id">
+    <meta property="og:type" content="website">
+
+    <!-- Twitter Cards -->
+    <meta name="twitter:card" content="summary_large_image">
+    <meta name="twitter:title" content="IndonesianTimes - Berita Tercepat & Terpercaya 2025">
+    <meta name="twitter:description" content="Dapatkan berita aktual dari sumber terpercaya setiap waktu.">
+    <meta name="twitter:image" content="https://www.indonesiantimes.id/cover.jpg">
+
+    <!-- Canonical URL -->
+    <link rel="canonical" href="https://indonesiantimes.github.io/News/index.html">
+
+    <!-- Favicon -->
+    <link rel="icon" href="/favicon.ico" type="image/x-icon">
+
+    <!-- Font and CSS -->
+    <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600;700&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
     <style>
         /* Global Styles */
         * {
