--- a/index.html
+++ b/index.html
@@ -3,16 +3,16 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>IndonesianTimes - Berita Tercepat & Terpercaya 2025</title>
+    <title>Indonesian Times - Berita Tercepat & Terpercaya 2025</title>
     
-    <!-- Structured Data (JSON-LD) -->
+       <!-- Structured Data (JSON-LD) -->
     <script type="application/ld+json">
     {
       "@context": "https://schema.org",
       "@type": "NewsMediaOrganization",
       "name": "IndonesianTimes",
-      "url": "https://www.indonesiantimes.id",
-      "logo": "https://www.indonesiantimes.id/logo.png",
+      "url": "https://indonesiantimes.github.io",
+      "logo": "https://indonesiantimes.github.io/News/assets/icon123.png",
       "sameAs": [
         "https://www.facebook.com/indonesiantimes",
         "https://www.twitter.com/indonesiantimes",
@@ -29,6 +29,55 @@
       }
     }
     </script>
+    <script type="application/ld+json">
+        {
+          "@context": "https://schema.org/", 
+          "@type": "BreadcrumbList", 
+          "itemListElement": [{
+            "@type": "ListItem", 
+            "position": 1, 
+            "name": "Indonesian Times",
+            "item": "https://indonesiantimes.github.io/News/"  
+          },{
+            "@type": "ListItem", 
+            "position": 2, 
+            "name": "Terungkap! Inilah Cara 'Live RTP' Mengubah Permainan Online – Anda Tidak Akan Percaya!",
+            "item": "https://indonesiantimes.github.io/News/Terungkap!-Inilah-Cara-Live-RTP-Mengubah-Permainan-Online%E2%80%93Anda-Tidak-Akan-Percaya!.html"  
+          }]
+        }
+        </script>
+        <script type="application/ld+json">
+            {
+              "@context": "https://schema.org/", 
+              "@type": "BreadcrumbList", 
+              "itemListElement": [{
+                "@type": "ListItem", 
+                "position": 1, 
+                "name": "Indonesian Times",
+                "item": "https://indonesiantimes.github.io/News/"  
+              },{
+                "@type": "ListItem", 
+                "position": 2, 
+                "name": "Indonesian Times - Pragmatic Play",
+                "item": "https://indonesiantimes.github.io/News/Pragmaticplay"  
+              },{
+                "@type": "ListItem", 
+                "position": 3, 
+                "name": "Indonesian Times - PG Soft",
+                "item": "https://indonesiantimes.github.io/News/PGsoft"  
+              },{
+                "@type": "ListItem", 
+                "position": 4, 
+                "name": "Indonesian Times - Evolution",
+                "item": "https://indonesiantimes.github.io/News/Evolution/"  
+              },{
+                "@type": "ListItem", 
+                "position": 5, 
+                "name": "Indonesian Times - Nolimit City",
+                "item": "https://indonesiantimes.github.io/News/NLC/"  
+              }]
+            }
+            </script>
 
     <!-- Meta Tags for SEO & Social -->
     <meta name="description" content="IndonesianTimes menyajikan berita tercepat, terpercaya, dan terverifikasi di Indonesia. Dapatkan update politik, ekonomi, teknologi, dan olahraga setiap hari.">
