--- a/index.html
+++ b/index.html
@@ -79,29 +79,29 @@
             }
             </script>
 
-    <!-- Meta Tags for SEO & Social -->
-    <meta name="description" content="IndonesianTimes menyajikan berita tercepat, terpercaya, dan terverifikasi di Indonesia. Dapatkan update politik, ekonomi, teknologi, dan olahraga setiap hari.">
-    <meta name="keywords" content="berita Indonesia, berita terpercaya, berita politik, ekonomi, teknologi, olahraga">
-    <meta name="author" content="IndonesianTimes">
+        <!-- Meta Tags for SEO & Social -->
+    <meta name="description" content="Indonesian Times menyajikan berita tercepat, terpercaya, dan terverifikasi di Indonesia. Dapatkan update politik, ekonomi, teknologi, dan olahraga setiap hari.">
+    <meta name="keywords" content="berita Indonesia, berita terpercaya, berita Pragmatic, PGsoft, Nolimitcity, Evolution">
+    <meta name="author" content="Indonesian Times">
 
     <!-- Open Graph (Facebook) -->
-    <meta property="og:title" content="IndonesianTimes - Berita Tercepat & Terpercaya 2025">
+    <meta property="og:title" content="Indonesian Times - Berita Tercepat & Terpercaya 2025">
     <meta property="og:description" content="Portal berita terpercaya dengan update real-time, fakta terverifikasi dan e-paper digital.">
-    <meta property="og:image" content="https://www.indonesiantimes.id/cover.jpg">
-    <meta property="og:url" content="https://www.indonesiantimes.id">
+    <meta property="og:image" content="https://indonesiantimes.github.io/News/assets/logotimes.gif">
+    <meta property="og:url" content="https://indonesiantimes.github.io">
     <meta property="og:type" content="website">
 
     <!-- Twitter Cards -->
     <meta name="twitter:card" content="summary_large_image">
-    <meta name="twitter:title" content="IndonesianTimes - Berita Tercepat & Terpercaya 2025">
+    <meta name="twitter:title" content="Indonesian Times - Berita Tercepat & Terpercaya 2025">
     <meta name="twitter:description" content="Dapatkan berita aktual dari sumber terpercaya setiap waktu.">
-    <meta name="twitter:image" content="https://www.indonesiantimes.id/cover.jpg">
+    <meta name="twitter:image" content="https://indonesiantimes.github.io/News/assets/logotimes.gif">
 
     <!-- Canonical URL -->
     <link rel="canonical" href="https://indonesiantimes.github.io/News/index.html">
 
     <!-- Favicon -->
-    <link rel="icon" href="/favicon.ico" type="image/x-icon">
+    <link rel="icon" href="News/assets/icon123.png" type="image/x-icon">
 
     <!-- Font and CSS -->
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600;700&display=swap" rel="stylesheet">
