--- a/index.html
+++ b/index.html
@@ -1,3 +1,4 @@
+
 <!DOCTYPE html>
 <html lang="id">
 <head>
@@ -5,12 +6,12 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Indonesian Times - Berita Tercepat & Terpercaya 2025</title>
     
-       <!-- Structured Data (JSON-LD) -->
+    <!-- Structured Data (JSON-LD) -->
     <script type="application/ld+json">
     {
       "@context": "https://schema.org",
       "@type": "NewsMediaOrganization",
-      "name": "IndonesianTimes",
+      "name": "Indonesian Times",
       "url": "https://indonesiantimes.github.io",
       "logo": "https://indonesiantimes.github.io/News/assets/icon123.png",
       "sameAs": [
@@ -79,7 +80,7 @@
             }
             </script>
 
-        <!-- Meta Tags for SEO & Social -->
+    <!-- Meta Tags for SEO & Social -->
     <meta name="description" content="Indonesian Times menyajikan berita tercepat, terpercaya, dan terverifikasi di Indonesia. Dapatkan update politik, ekonomi, teknologi, dan olahraga setiap hari.">
     <meta name="keywords" content="berita Indonesia, berita terpercaya, berita Pragmatic, PGsoft, Nolimitcity, Evolution">
     <meta name="author" content="Indonesian Times">
@@ -461,14 +462,12 @@
     <header>
         <div class="container">
             <nav>
-                <div class="logo">Indonesian<span>Times</span></div>
+                <div class="logo"><a href="https://indonesiantimes.github.io/News/"><img src="https://indonesiantimes.github.io/News/assets/logotimes.gif" alt="Indonesian Times Logo" style="width: 30%;"></a></div>
                 <ul class="nav-links">
-                    <li><a href="#">Beranda</a></li>
-                    <li><a href="#">Politik</a></li>
-                    <li><a href="#">Ekonomi</a></li>
-                    <li><a href="#">Teknologi</a></li>
-                    <li><a href="#">Olahraga</a></li>
-                    <li><a href="#">Kontak</a></li>
+                    <li><a href="https://indonesiantimes.github.io/News/Pragmaticplay/">PragmaticPlay</a></li>
+                    <li><a href="https://indonesiantimes.github.io/News/PGsoft/">PGsoft</a></li>
+                    <li><a href="https://indonesiantimes.github.io/News/Evolution/">Evolution</a></li>
+                    <li><a href="https://indonesiantimes.github.io/News/NLC/">Nolimit City</a></li>
                 </ul>
             </nav>
         </div>
@@ -480,7 +479,7 @@
             <div class="hero-content">
                 <h1>Berita Tercepat & Terpercaya di Indonesia</h1>
                 <p>Dapatkan update berita terbaru 24/7 langsung dari sumber terpercaya. Tanpa hoax, tanpa bias.</p>
-                <a href="#" class="btn">Download Aplikasi</a>
+                <a href="#" class="btn">Subscribe</a>
             </div>
         </div>
     </section>
@@ -489,7 +488,7 @@
     <section class="features">
         <div class="container">
             <div class="section-title">
-                <h2>Kenapa Memilih IndonesianTimes?</h2>
+                <h2>Kenapa Memilih Indonesian Times?</h2>
                 <p>Kami memberikan pengalaman berbeda dalam membaca berita</p>
             </div>
             <div class="features-grid">
@@ -578,7 +577,7 @@
         <div class="container">
             <div class="footer-grid">
                 <div class="footer-column">
-                    <h3>IndonesianTimes</h3>
+                    <h3>Indonesian Times</h3>
                     <p>Portal berita tercepat dan terpercaya di Indonesia. Menyajikan berita aktual tanpa bias.</p>
                     <div class="social-links">
                         <a href="#"><i class="fab fa-facebook-f"></i></a>
@@ -616,7 +615,7 @@
                 </div>
             </div>
             <div class="copyright">
-                <p>&copy; 2025 IndonesianTimes. All Rights Reserved.</p>
+                <p>&copy; 2025 Indonesian Times. All Rights Reserved.</p>
             </div>
         </div>
     </footer>
