--- a/Pragmaticplay/index.html
+++ b/Pragmaticplay/index.html
@@ -132,7 +132,7 @@
     <div class="gallery-container">
        <!-- area gallery -->
         <div class="article-card">
-            <img src="https://via.placeholder.com/600x400?text=Artikel+1" alt="Artikel 1" class="article-image">
+            <img src="https://indonesiantimes.github.io/News/assets/cara_mengubah_live_rtp.webp" alt="Artikel 1" class="article-image">
             <div class="article-content">
                 <h2 class="article-title">Terungkap! Inilah Cara 'Live RTP' Mengubah Permainan Online – Anda Tidak Akan Percaya!</h2>
                 <p class="article-excerpt">Bongkar rahasia industri game digital melalui teknologi Live RTP yang mengubah strategi permainan online secara drastis. Klik dan temukan kunci kemenangan Anda!</p>
