--- a/index.html
+++ b/index.html
@@ -588,13 +588,10 @@
                 </div>
                 <div class="footer-column">
                     <h3>Kategori</h3>
-                    <ul class="footer-links">
-                        <li><a href="#">Politik</a></li>
-                        <li><a href="#">Ekonomi</a></li>
-                        <li><a href="#">Teknologi</a></li>
-                        <li><a href="#">Olahraga</a></li>
-                        <li><a href="#">Hiburan</a></li>
-                    </ul>
+               <li><a href="https://indonesiantimes.github.io/News/Pragmaticplay/">PragmaticPlay</a></li>
+                    <li><a href="https://indonesiantimes.github.io/News/PGsoft/">PGsoft</a></li>
+                    <li><a href="https://indonesiantimes.github.io/News/Evolution/">Evolution</a></li>
+                    <li><a href="https://indonesiantimes.github.io/News/NLC/">Nolimit City</a></li>
                 </div>
                 <div class="footer-column">
                     <h3>Perusahaan</h3>
