--- a/index.html
+++ b/index.html
@@ -588,10 +588,12 @@
                 </div>
                 <div class="footer-column">
                     <h3>Kategori</h3>
-               <li><a href="https://indonesiantimes.github.io/News/Pragmaticplay/">PragmaticPlay</a></li>
+                    <ul class="footer-links">
+                    <li><a href="https://indonesiantimes.github.io/News/Pragmaticplay/">PragmaticPlay</a></li>
                     <li><a href="https://indonesiantimes.github.io/News/PGsoft/">PGsoft</a></li>
                     <li><a href="https://indonesiantimes.github.io/News/Evolution/">Evolution</a></li>
                     <li><a href="https://indonesiantimes.github.io/News/NLC/">Nolimit City</a></li>
+                    </ul>
                 </div>
                 <div class="footer-column">
                     <h3>Perusahaan</h3>
