--- a/index.html
+++ b/index.html
@@ -516,29 +516,14 @@
             </div>
             <div class="news-grid">
                 <div class="news-card">
-                    <img src="https://images.unsplash.com/photo-1521791136064-7986c2920216?ixlib=rb-1.2.1&auto=format&fit=crop&w=1350&q=80" alt="Berita Politik" class="news-image">
+                    <img src="hhttps://indonesiantimes.github.io/News/assets/cara_mengubah_live_rtp.webp" alt="Cara Mengubah RTP" class="news-image">
                     <div class="news-content">
-                        <span class="news-category">Politik</span>
-                        <h3>Pertemuan Presiden dengan Pemimpin Dunia Bahas Isu Perubahan Iklim</h3>
+                        <span class="news-category">Pragmatic Play</span>
+                        <h3>Terungkap! Inilah Cara 'Live RTP' Mengubah Permainan Online – Anda Tidak Akan Percaya!</h3>
                         <p class="news-date">15 April 2025</p>
                     </div>
                 </div>
-                <div class="news-card">
-                    <img src="https://images.unsplash.com/photo-1554224155-6726b3ff858f?ixlib=rb-1.2.1&auto=format&fit=crop&w=1350&q=80" alt="Berita Ekonomi" class="news-image">
-                    <div class="news-content">
-                        <span class="news-category">Ekonomi</span>
-                        <h3>IHSG Tembus Level Tertinggi Sepanjang Masa di Awal 2025</h3>
-                        <p class="news-date">14 April 2025</p>
-                    </div>
-                </div>
-                <div class="news-card">
-                    <img src="https://images.unsplash.com/photo-1518770660439-4636190af475?ixlib=rb-1.2.1&auto=format&fit=crop&w=1350&q=80" alt="Berita Teknologi" class="news-image">
-                    <div class="news-content">
-                        <span class="news-category">Teknologi</span>
-                        <h3>Startup Lokal Rilis AI Terbaru yang Bisa Baca Pikiran Manusia</h3>
-                        <p class="news-date">13 April 2025</p>
-                    </div>
-                </div>
+                
             </div>
         </div>
     </section>
