--- a/index.html
+++ b/index.html
@@ -523,7 +523,57 @@
                         <p class="news-date">15 April 2025</p>
                     </div>
                 </div>
-                
+                <h1>IndonesianTimes – Portal Berita Terpercaya & Terupdate di Indonesia</h1>
+
+<p>
+    <strong><a href="https://indonesiantimes.github.io/News/">IndonesianTimes</a></strong> adalah platform media digital terkemuka yang menyajikan berita terkini, analisis mendalam, dan informasi terpercaya seputar politik, ekonomi, hiburan, teknologi, dan gaya hidup di Indonesia.  
+</p>
+
+<h2>Visi & Misi</h2>
+
+<h3>Visi</h3>
+<p>
+    Menjadi sumber berita utama yang mengedepankan <a href="/prinsip-jurnalistik" title="Prinsip Jurnalistik IndonesianTimes">integritas jurnalistik</a>, kecepatan, dan akurasi dalam menyampaikan informasi kepada masyarakat Indonesia.  
+</p>
+
+<h3>Misi</h3>
+<p>
+    Memberikan liputan berita yang <a href="/standar-berita" title="Standar Kualitas Berita">berkualitas tinggi</a>, imparsial, dan relevan dengan kebutuhan pembaca dari berbagai kalangan.  
+</p>
+
+<h2>Topik Berita Kami</h2>
+
+<h3>Politik & Hukum</h3>
+<p>
+    Update terkini seputar kebijakan pemerintah, <a href="/politik/isu-nasional" title="Berita Politik Terkini">isu nasional</a>, dan perkembangan hukum di Indonesia.  
+</p>
+
+<h3>Ekonomi & Bisnis</h3>
+<p>
+    Analisis mendalam mengenai pasar, investasi, dan <a href="/ekonomi/startup" title="Berita Startup Indonesia">trend startup</a> lokal maupun global.  
+</p>
+
+<h3>Teknologi & Inovasi</h3>
+<p>
+    Kabar terbaru seputar teknologi, sains, dan <a href="/teknologi/gadget" title="Review Gadget Terkini">review gadget</a> paling akurat.  
+</p>
+
+<h3>Hiburan & Gaya Hidup</h3>
+<p>
+    Berita selebriti, film, musik, dan <a href="/hiburan/kuliner" title="Rekomendasi Kuliner">rekomendasi kuliner</a> terbaik di Indonesia.  
+</p>
+
+<h2>Mengapa Memilih IndonesianTimes?</h2>
+<p>
+    - <strong>Cepat & Akurat</strong>: Tim redaksi profesional yang selalu update 24/7.  
+    - <strong>Netral & Objektif</strong>: Berita disajikan tanpa bias kepentingan tertentu.  
+    - <strong>Ramah Pembaca</strong>: Artikel dengan bahasa mudah dipahami dan <a href="/pedoman-penulisan" title="Pedoman Penulisan Berita">standar penulisan jelas</a>.  
+</p>
+
+<h2>Terhubung dengan Kami</h2>
+<p>
+    Ikuti perkembangan berita terbaru via <a href="/media-sosial" title="Follow IndonesianTimes">media sosial</a> atau berlangganan newsletter kami <a href="/newsletter" title="Berlangganan Newsletter">di sini</a>.  
+</p>
             </div>
         </div>
     </section>
