--- a/index.html
+++ b/index.html
@@ -516,7 +516,7 @@
             </div>
             <div class="news-grid">
                 <div class="news-card">
-                    <img src="hhttps://indonesiantimes.github.io/News/assets/cara_mengubah_live_rtp.webp" alt="Cara Mengubah RTP" class="news-image">
+                    <img src="https://indonesiantimes.github.io/News/assets/cara_mengubah_live_rtp.webp" alt="Cara Mengubah RTP" class="news-image">
                     <div class="news-content">
                         <span class="news-category">Pragmatic Play</span>
                         <h3>Terungkap! Inilah Cara 'Live RTP' Mengubah Permainan Online – Anda Tidak Akan Percaya!</h3>
