--- a/PGsoft/index.html
+++ b/PGsoft/index.html
@@ -132,7 +132,7 @@
     <div class="gallery-container">
        <!-- area gallery -->
         <div class="article-card">
-            <img src=""alt="Artikel 1" class="article-image">
+            <img src="https://IndonesianTimes.github.io/News/assets/mahjongways2-deluxe-teknologi.webp"alt="Teknologin Mahjongways 2" class="article-image">
             <div class="article-content">
                 <h2 class="article-title">Mengungkap Algoritma Mahjongways 2 Deluxe</h2>
                 <p class="article-excerpt"> Mahjongways 2 Deluxe sukses memikat komunitas slot online dengan fitur cascading dan multiplier dinamis.
