--- a/amp/algoritma-mahjongways2-deluxe-amp.html
+++ b/amp/algoritma-mahjongways2-deluxe-amp.html
@@ -1,1 +1,121 @@
+<!doctype html>
+<html ⚡ lang="id">
+<head>
+  <meta charset="utf-8">
+  <title>Mengungkap Algoritma Mahjongways 2 Deluxe: Strategi Gacor & Teknologi di Baliknya</title>
+  <link rel="canonical" href="https://indonesiantimes.github.io/News/PGsoft/algoritma-mahjongways2-deluxe.html" />
+  <meta name="viewport" content="width=device-width,minimum-scale=1,initial-scale=1">
+  <meta name="description" content="Mahjongways 2 Deluxe bukan hanya game slot biasa. Kami membedah algoritma kemenangan dan teknologi tersembunyi yang membuatnya jadi primadona 2025.">
+  <meta name="keywords" content="Mahjongways 2 Deluxe, algoritma kemenangan slot, strategi Mahjongways, slot gacor 2025, Indonesian Times, teknologi game online">
+  <meta name="theme-color" content="#ffffff">
+  <script async src="https://cdn.ampproject.org/v0.js"></script>
+  <style amp-custom>
+    body {
+      font-family: 'Arial', sans-serif;
+      line-height: 1.7;
+      padding: 16px;
+      color: #222;
+    }
+    h1 { font-size: 24px; color: #111; }
+    h2 { font-size: 20px; margin-top: 24px; }
+    h3 { font-size: 18px; margin-top: 16px; }
+    p { margin: 12px 0; }
+    footer {
+      font-size: 14px;
+      color: #777;
+      margin-top: 40px;
+      text-align: center;
+    }
+    figcaption {
+      font-size: 14px;
+      color: #666;
+      text-align: center;
+      margin-top: 8px;
+    }
+  </style>
+</head>
+<body>
 
+  <header>
+    <h1>Mengungkap Algoritma Mahjongways 2 Deluxe: Strategi Gacor & Teknologi di Baliknya</h1>
+  </header>
+
+  <main>
+    <figure>
+      <amp-img src="https://indonesiantimes.github.io/News/assets/mahjongways2-deluxe-teknologi.webp"
+               width="1200" height="675" layout="responsive"
+               alt="Ilustrasi algoritma Mahjongways 2 Deluxe dan teknologi slot online">
+      </amp-img>
+      <figcaption>Visualisasi algoritma Mahjongways 2 Deluxe dan strategi komunitas slot online Indonesia.</figcaption>
+    </figure>
+
+    <section>
+      <h2>Kenapa Mahjongways 2 Deluxe Jadi Sorotan di 2025?</h2>
+      <p>Popularitas <strong>Mahjongways 2 Deluxe</strong> meningkat di kalangan gamer Indonesia. Dengan desain visual khas budaya Tiongkok dan fitur multiplier bertingkat, game ini menciptakan keseimbangan antara strategi dan hiburan.</p>
+    </section>
+
+    <section>
+      <h2>Algoritma Kemenangan: Lebih dari Sekadar Keberuntungan</h2>
+      <h3>🔁 Sistem Cascading & Multiplier Dinamis</h3>
+      <p>Setiap kemenangan di Mahjongways 2 memicu cascading simbol baru dan meningkatkan multiplier hingga 10x. Ini memberi peluang maxwin dalam satu sesi beruntun.</p>
+
+      <h3>📊 Live RTP dan Jam Gacor</h3>
+      <p>Dengan RTP 96.9% dan volatilitas tinggi, waktu bermain antara <strong>13.00–15.00</strong> dan <strong>21.00–23.00 WIB</strong> dianggap paling gacor menurut komunitas Telegram slot.</p>
+    </section>
+
+    <section>
+      <h2>Teknologi HTML5 dan AI Visual Interaktif</h2>
+      <p>Game ini memanfaatkan HTML5 dan animasi real-time untuk pengalaman yang responsif. Efek suara dinamis dan UI interaktif turut meningkatkan engagement pemain.</p>
+    </section>
+
+    <section>
+      <h2>Kesimpulan</h2>
+      <p>Mahjongways 2 Deluxe menunjukkan bahwa strategi dan teknologi berjalan beriringan. Kombinasi algoritma RNG modern, waktu bermain optimal, dan dukungan komunitas menjadikannya favorit tahun ini.</p>
+    </section>
+
+    <section>
+      <h2>Tentang Indonesian Times</h2>
+      <p><strong>Indonesian Times</strong> adalah media digital yang menyajikan berita teknologi, game, budaya digital, dan gaya hidup online dengan gaya informatif dan berwawasan.</p>
+    </section>
+  </main>
+
+  <footer>
+    <p>© 2025 Indonesian Times — Portal berita teknologi & game digital Indonesia.</p>
+  </footer>
+
+  <!-- Schema for Google Discover -->
+  <script type="application/ld+json">
+  {
+    "@context": "https://schema.org",
+    "@type": "NewsArticle",
+    "mainEntityOfPage": {
+      "@type": "WebPage",
+      "@id": "https://indonesiantimes.github.io/News/algoritma-mahjongways2-deluxe.html"
+    },
+    "headline": "Mengungkap Algoritma Mahjongways 2 Deluxe: Strategi Gacor & Teknologi di Baliknya",
+    "description": "Mahjongways 2 Deluxe bukan hanya game slot biasa. Kami membedah algoritma kemenangan dan teknologi tersembunyi yang membuatnya jadi primadona 2025.",
+    "image": {
+      "@type": "ImageObject",
+      "url": "https://indonesiantimes.github.io/News/assets/mahjongways2-deluxe-teknologi.webp",
+      "width": 1200,
+      "height": 675
+    },
+    "author": {
+      "@type": "Organization",
+      "name": "Indonesian Times",
+      "url": "https://indonesiantimes.github.io"
+    },
+    "publisher": {
+      "@type": "Organization",
+      "name": "Indonesian Times",
+      "logo": {
+        "@type": "ImageObject",
+        "url": "https://indonesiantimes.github.io/assets/logo.webp"
+      }
+    },
+    "datePublished": "2025-04-18",
+    "dateModified": "2025-04-18"
+  }
+  </script>
+</body>
+</html>
